Added caption with image

--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!doctype html>
 
 <html lang="no">
+
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <title>Jon-Martin Storm</title>
-  <meta name="description" content="Jon-Martin Storm personlig side">
-  <meta name="author" content="Jon-Martin Storm">
+    <title>Jon-Martin Storm</title>
+    <meta name="description" content="Jon-Martin Storm personlig side">
+    <meta name="author" content="Jon-Martin Storm">
 
-  <!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
+    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
 <body>
-    <h1>Jon-Martin Storm</h1>
-    <p>Velkommen</p>
-    <p>Jeg er en teknologi-interessert byråkrat med spesiell kjærlighet for sikkerhet</p>
-    <p>Kontakt meg: jonmartin.storm@gmail.com</p>
-  <!--<script src="js/scripts.js"></script>-->
+    <div class="bg"></div>
+    <div class="caption">
+        <span class="border">Jon-Martin Storm</span>
+        <br>
+        <img src="images/katrine.png" alt="Katrine Heldor Storm">
+    </div>
+    <div class="experience">
+        <p>Velkommen</p>
+        <p>Jeg er en teknologi-interessert byråkrat med spesiell kjærlighet for sikkerhet</p>
+        <p>Kontakt meg: jonmartin.storm@gmail.com</p>
+    </div>
+    <div class="contact">
+        <p>Kontakt meg: jonmartin.storm@gmail.com</p>
+    </div>
+    <!--<script src="js/scripts.js"></script>-->
 </body>
+
 </html>
