--- a/index.html
+++ b/index.html
@@ -15,18 +15,45 @@
 </head>
 
 <body>
-    <div class="bg"></div>
-    <div class="caption">
-        <span class="border">Jon-Martin Storm</span>
-        <br>
+  <div class="bg"></div>
+  <p id="bottom"><span>Bakgrunnsbilde av <a href="https://unsplash.com/@melindagimpel?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Melinda Gimpel</a> på <a href="https://unsplash.com/s/photos/coffee-computer?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
+  <div class="caption-outer">
+    <div class="caption-inner">
+      <span class="title-text">Jon-Martin Storm</span>
+      <br>
+      <span class="title-text">Hei, og velkommen til min lille side.</span>
+      <br>
+      <img src="images/jonmartin.png" alt="Jon-Martin Storm">
     </div>
-    <div class="experience">
-        <p>Velkommen</p>
-        <p>Jeg er en teknologi-interessert byråkrat med spesiell kjærlighet for sikkerhet</p>
-        <p>Kontakt meg: jonmartin.storm@gmail.com</p>
+  </div>
+  <div class="experience">
+    <p>Jeg er en teknologi-interessert byråkrat med spesiell kjærlighet for cybersikkerhet</p>
+    <div class="column">
+      Profesjonell erfaring
+      <ul>
+        <li>Cybersikkerhet</li>
+        <li>Industrielle kontrollsystemer</li>
+        <li>Kraftforsyning</li>
+        <li>Tilsyn</li>
+        <li>Regelverskutvikling</li>
+      </ul>
     </div>
+    <div class="column">
+      Privat erfaring
+      <ul>
+        <li>Front-end webdesign</li>
+        <li>Videoredigering</li>
+        <li>Fotografering</li>
+        <li>Bilderedigering</li>
+        <li>Familiesjonglering</li>
+      </ul>
+    </div>
+  </div>
     <div class="contact">
-        <p>Kontakt meg: jonmartin.storm@gmail.com</p>
+        <p>Kontakt meg:</p>
+        <p><a href="mailto:jonmartin@storme.no?subject=Kontakt%20via%20hjemmeside">Epost: jonmartin@storme.no</a></p>
+        <p><a href="https://www.linkedin.com/in/jon-martin-storm-69332926/">Linkedin: Jon-Martin Storm</a></p>
+        <p>© alle rettigheter forbeholdt</p>
     </div>
     <!--<script src="js/scripts.js"></script>-->
 </body>
