--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <br>
       <span class="title-text">Hei, og velkommen til min lille side.</span>
       <br>
-      <img src="images/jonmartin.png" alt="Jon-Martin Storm">
+      <img src="images/jonmartin.jpeg" alt="Jon-Martin Storm">
     </div>
   </div>
   <div class="experience">
