--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <div class="column">
       Privat erfaring
       <ul>
-        <li>Front-end webdesign</li>
+        <li>Back-end web</li>
+        <li>Virtuelle maskiner</li>
+        <li>Integrerte systemer og IoT</li>
         <li>Videoredigering</li>
-        <li>Fotografering</li>
-        <li>Bilderedigering</li>
         <li>Familiesjonglering</li>
       </ul>
     </div>
