--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="bg"></div>
-  <p id="bottom"><span>Bakgrunnsbilde av <a href="https://unsplash.com/@melindagimpel?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Melinda Gimpel</a> på <a href="https://unsplash.com/s/photos/coffee-computer?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
+  <p id="bottom"><span>Photo by <a href="https://unsplash.com/@sotti?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Shifaaz shamoon</a> on <a href="https://unsplash.com/s/photos/beach?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
   <div class="caption-outer">
     <div class="caption-inner">
       <span class="title-text">Jon-Martin Storm</span>
